--- a/build-image/openhabian.pi-raspios32.conf
+++ b/build-image/openhabian.pi-raspios32.conf
@@ -69,6 +69,9 @@ java_opt=Zulu8-32
 # install ZRAM per default, set to "disable" to skip installation
 #zraminstall=enable
 
+# start comitup hotspot if internet is not reachable
+hotspot=enable
+
 # external SD card device to backup and mirror the internal SD card to
 #backupdrive=/dev/sda
 #storageconfig=openhab-dir
