--- a/build-image/openhabian.pi-raspios64beta.conf
+++ b/build-image/openhabian.pi-raspios64beta.conf
@@ -70,6 +70,9 @@ java_opt=Zulu11-64
 # install ZRAM per default, set to "disable" to skip installation
 #zraminstall=enable
 
+# start comitup hotspot if internet is not reachable
+hotspot=enable
+
 # external SD card device to backup and mirror the internal SD card to
 #backupdrive=/dev/sda
 #storageconfig=openhab-dir
